--- a/app/src/main/res/layout/activity_llogaria.xml
+++ b/app/src/main/res/layout/activity_llogaria.xml
@@ -22,19 +22,18 @@
         app:layout_constraintStart_toEndOf="@+id/llperdoruesitxt4"
         app:layout_constraintTop_toBottomOf="@+id/profileimg" />
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/profileimg"
         android:layout_width="115dp"
         android:layout_height="119dp"
         android:layout_marginTop="28dp"
         android:src="@drawable/ic_llogaria"
+        app:civ_border_color="#0361AC"
+        app:civ_border_width="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.189"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6"
-        app:civ_border_width="2dp"
-        app:civ_border_color="#0361AC"/>
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
         android:id="@+id/textView6"
